--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Demo App</title>
+    <title>ES6 Typescript jspm Angular2 Demo App</title>
     <!-- systemJS loader and config -->
     <script src="lib/system.js"></script>
     <script src="config.js"></script>
 </head>
 <body>
+    <h1>ES6 Typescript jspm Angular2 Demo App</h1>
+    <br />
+    <br />
+    <br />
     <!-- our angular2 component -->
     <test-app>
         Loading...
